force-app/main/default/objects/Opportunity/fields/Resort_Option__c.field-meta.xml
<CustomField>
    <fullName>Resort_Option__c</fullName>
    <description>Choose which resort is associated with the Opportunity.</description>
    <label>Resort Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>All Star Sports</fullName>
            </value>
            <value>
                <fullName>All Start Movies</fullName>
            </value>
            <value>
                <fullName>All Start Music</fullName>
            </value>
            <value>
                <fullName>Aventura</fullName>
            </value>
            <value>
                <fullName>Cabana Bay</fullName>
                <default>true</default>
                <label>Cabana Bay</label>
            </value>
            <value>
                <fullName>Caribbean Beach</fullName>
            </value>
            <value>
                <fullName>Coronado Springs</fullName>
            </value>
            <value>
                <fullName>Endless Summer: Dockside Inn &amp; Suites</fullName>
            </value>
            <value>
                <fullName>Endless Summer Surfside</fullName>
            </value>
            <value>
                <fullName>Gaylord Palms</fullName>
            </value>
            <value>
                <fullName>Hard Rock Hotel</fullName>
            </value>
            <value>
                <fullName>Hilton Hawaiian Village</fullName>
            </value>
            <value>
                <fullName>Hilton Tempo NYC</fullName>
            </value>
            <value>
                <fullName>Holiday Inn</fullName>
            </value>
            <value>
                <fullName>Pop Century</fullName>
            </value>
            <value>
                <fullName>Port Orleans</fullName>
            </value>
            <value>
                <fullName>Sandcastle - Virginia Beach</fullName>
            </value>
            <value>
                <fullName>Sapphire Falls</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>