force-app/main/default/objects/Opportunity/fields/Resort_Welcome_Dinner__c.field-meta.xml
<CustomField>
    <fullName>Resort_Welcome_Dinner__c</fullName>
    <label>Resort Welcome Dinner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>