force-app/main/default/objects/Opportunity/fields/RGP_Accepted__c.field-meta.xml
<CustomField>
    <fullName>RGP_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field if the team or individual accepted RGP</description>
    <label>RGP Accepted</label>
    <type>Checkbox</type>
</CustomField>