force-app/main/default/objects/Opportunity/fields/Rooming_List_Received__c.field-meta.xml
<CustomField>
    <fullName>Rooming_List_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be checked when the Rooming List is received.</description>
    <label>Rooming List Received</label>
    <type>Checkbox</type>
</CustomField>