force-app/main/default/objects/Opportunity/fields/Rooming_List_Sent_To_Resort__c.field-meta.xml
<CustomField>
    <fullName>Rooming_List_Sent_To_Resort__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rooming List Sent To Resort</label>
    <type>Checkbox</type>
</CustomField>