force-app/main/default/objects/Opportunity/fields/Round_Trip_Airline_Seats_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Round_Trip_Airline_Seats_Purchased__c</fullName>
    <label>Round Trip Airline Seats Purchased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>