force-app/main/default/objects/Opportunity/fields/S__c.field-meta.xml
<CustomField>
    <fullName>S__c</fullName>
    <label>School Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>