force-app/main/default/objects/Opportunity/fields/Sales_Call_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sales_Call_Notes__c</fullName>
    <label>Sales Call Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>