force-app/main/default/objects/Opportunity/fields/Schedule_Request_Notes__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Request_Notes__c</fullName>
    <label>Schedule Request Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>