force-app/main/default/objects/Opportunity/fields/Schedule_Request_Recv_d__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Request_Recv_d__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box when the Spring Schedule Request is received.</description>
    <label>Schedule Request Recv&apos;d</label>
    <type>Checkbox</type>
</CustomField>