force-app/main/default/objects/Opportunity/fields/Schedule_Request_Review_Call__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Request_Review_Call__c</fullName>
    <label>Schedule Request Review Call</label>
    <type>DateTime</type>
</CustomField>