force-app/main/default/objects/Opportunity/fields/Schedule_Request_Review_Call_Complete__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Request_Review_Call_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule Request Review Call Complete</label>
    <type>Checkbox</type>
</CustomField>