force-app/main/default/objects/Opportunity/fields/Scholarship_Check_Sent__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Check_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scholarship Check Sent</label>
    <type>Checkbox</type>
</CustomField>