force-app/main/default/objects/Opportunity/fields/Scholarship_Essay_Received__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Essay_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scholarship Essay Received</label>
    <type>Checkbox</type>
</CustomField>