force-app/main/default/objects/Opportunity/fields/Scholarship_Nominee__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Nominee__c</fullName>
    <label>Scholarship Nominee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>