force-app/main/default/objects/Opportunity/fields/Scholarship_Nominee_s_University__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Nominee_s_University__c</fullName>
    <label>Scholarship Nominee&apos;s School Of Choice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>