force-app/main/default/objects/Opportunity/fields/School_Contact__c.field-meta.xml
<CustomField>
    <fullName>School_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>KSA Opportunity</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>