force-app/main/default/objects/Opportunity/fields/School_Contact_Formula__c.field-meta.xml
<CustomField>
    <fullName>School_Contact_Formula__c</fullName>
    <formula>School_Contact__r.FirstName +&quot; &quot;+ School_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Contact Formula</label>
    <type>Text</type>
</CustomField>