force-app/main/default/objects/Opportunity/fields/School_Donation__c.field-meta.xml
<CustomField>
    <fullName>School_Donation__c</fullName>
    <label>School Donation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>