force-app/main/default/objects/Opportunity/fields/School_Mascot__c.field-meta.xml
<CustomField>
    <fullName>School_Mascot__c</fullName>
    <label>School Mascot</label>
    <length>25</length>
    <type>Text</type>
</CustomField>