force-app/main/default/objects/Opportunity/fields/Sea_World_Meal_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Sea_World_Meal_Coupon__c</fullName>
    <label>Sea World Meal Coupon</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>