force-app/main/default/objects/Opportunity/fields/Sea_World_Theme_Park_Admission__c.field-meta.xml
<CustomField>
    <fullName>Sea_World_Theme_Park_Admission__c</fullName>
    <label>Sea World Theme Park Admission</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Day Sea World</fullName>
            </value>
            <value>
                <fullName>1 Day Aquatica</fullName>
            </value>
            <value>
                <fullName>1 Day Combo</fullName>
            </value>
            <value>
                <fullName>2 Day Combo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>