force-app/main/default/objects/Opportunity/fields/Seats_Sold__c.field-meta.xml
<CustomField>
    <fullName>Seats_Sold__c</fullName>
    <label>Seats Sold</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>