force-app/main/default/objects/Opportunity/fields/Single_Rate__c.field-meta.xml
<CustomField>
    <fullName>Single_Rate__c</fullName>
    <label>Single Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>