force-app/main/default/objects/Opportunity/fields/Single_Room__c.field-meta.xml
<CustomField>
    <fullName>Single_Room__c</fullName>
    <description>Number of Single Rooms for this Opportunity</description>
    <label>Single Room</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>