force-app/main/default/objects/Opportunity/fields/Sold_Ticket_Price__c.field-meta.xml
<CustomField>
    <fullName>Sold_Ticket_Price__c</fullName>
    <label>Sold Ticket Price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>