force-app/main/default/objects/Opportunity/fields/Specialty_Event_1_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Event_1_Date_Time__c</fullName>
    <label>Specialty Event 1 - Date/Time</label>
    <type>DateTime</type>
</CustomField>