force-app/main/default/objects/Opportunity/fields/Specialty_Event_3_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Event_3_Date_Time__c</fullName>
    <label>Specialty Event 3 - Date/Time</label>
    <type>DateTime</type>
</CustomField>