force-app/main/default/objects/Opportunity/fields/Specialty_Events__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Events__c</fullName>
    <label>Specialty Events</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Andretti</fullName>
            </value>
            <value>
                <fullName>Cabana Bay Galaxy Bowl</fullName>
            </value>
            <value>
                <fullName>Cocktail Hour</fullName>
            </value>
            <value>
                <fullName>CoCoa Beach Trip</fullName>
            </value>
            <value>
                <fullName>Disney Springs</fullName>
            </value>
            <value>
                <fullName>Icon Park</fullName>
            </value>
            <value>
                <fullName>Kennedy Space Center</fullName>
            </value>
            <value>
                <fullName>MLB Spring Training Game</fullName>
            </value>
            <value>
                <fullName>Orlando Magic</fullName>
            </value>
            <value>
                <fullName>Orlando Tree Trek</fullName>
            </value>
            <value>
                <fullName>Top Golf</fullName>
            </value>
            <value>
                <fullName>UCF Athletic Event</fullName>
            </value>
            <value>
                <fullName>Welcome Reception</fullName>
            </value>
            <value>
                <fullName>Church</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>