force-app/main/default/objects/Opportunity/fields/Specialty_Meal_3_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Meal_3_Date_Time__c</fullName>
    <label>Specialty Meal 3 Date/Time</label>
    <type>DateTime</type>
</CustomField>