force-app/main/default/objects/Opportunity/fields/Specialty_Meal_Date_Time_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Meal_Date_Time_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specialty Meal Confirmed</label>
    <type>Checkbox</type>
</CustomField>