force-app/main/default/objects/Opportunity/fields/Specialty_Meal_Docs_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Meal_Docs_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specialty Meal Docs Uploaded</label>
    <type>Checkbox</type>
</CustomField>