force-app/main/default/objects/Opportunity/fields/Specialty_Meals__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Meals__c</fullName>
    <label>Specialty Meals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Box Lunch At The Field</fullName>
            </value>
            <value>
                <fullName>Box Lunch At The Airport</fullName>
            </value>
            <value>
                <fullName>Character Breakfast</fullName>
            </value>
            <value>
                <fullName>Epcot Forever Specialty Meal</fullName>
            </value>
            <value>
                <fullName>Fogo de Chão</fullName>
            </value>
            <value>
                <fullName>Hard Rock Breakfast</fullName>
            </value>
            <value>
                <fullName>Hard Rock Dinner</fullName>
            </value>
            <value>
                <fullName>Kobe Steakhouse</fullName>
            </value>
            <value>
                <fullName>Margaritaville Specialty Meal</fullName>
            </value>
            <value>
                <fullName>NBC Grille Specialty Meal</fullName>
            </value>
            <value>
                <fullName>Pizza at Resort</fullName>
            </value>
            <value>
                <fullName>Birthday Cake at Resort</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>