force-app/main/default/objects/Opportunity/fields/Stop_Installment__c.field-meta.xml
<CustomField>
    <fullName>Stop_Installment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Installment</label>
    <type>Checkbox</type>
</CustomField>