force-app/main/default/objects/Opportunity/fields/Stop_Late_Fee__c.field-meta.xml
<CustomField>
    <fullName>Stop_Late_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Late Fee</label>
    <type>Checkbox</type>
</CustomField>