force-app/main/default/objects/Opportunity/fields/Stop_Online_Registration__c.field-meta.xml
<CustomField>
    <fullName>Stop_Online_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Online Registration</label>
    <type>Checkbox</type>
</CustomField>