force-app/main/default/objects/Opportunity/fields/Stop_Pay_In_Full_Discount__c.field-meta.xml
<CustomField>
    <fullName>Stop_Pay_In_Full_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Pay In Full Discount</label>
    <type>Checkbox</type>
</CustomField>