force-app/main/default/objects/Opportunity/fields/Suite_6_to_a_Room__c.field-meta.xml
<CustomField>
    <fullName>Suite_6_to_a_Room__c</fullName>
    <label>Suite 6 to a Room</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>