force-app/main/default/objects/Opportunity/fields/Suite_Double__c.field-meta.xml
<CustomField>
    <fullName>Suite_Double__c</fullName>
    <label>Suite Double</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>