force-app/main/default/objects/Opportunity/fields/Suite_Double_Rate__c.field-meta.xml
<CustomField>
    <fullName>Suite_Double_Rate__c</fullName>
    <label>Suite Double Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>