force-app/main/default/objects/Opportunity/fields/Suite_Quad__c.field-meta.xml
<CustomField>
    <fullName>Suite_Quad__c</fullName>
    <label>Suite Quad</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>