force-app/main/default/objects/Opportunity/fields/Suite_Single__c.field-meta.xml
<CustomField>
    <fullName>Suite_Single__c</fullName>
    <label>Suite Single</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>