force-app/main/default/objects/Opportunity/fields/Suite_Single_Rate__c.field-meta.xml
<CustomField>
    <fullName>Suite_Single_Rate__c</fullName>
    <label>Suite Single Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>