force-app/main/default/objects/Opportunity/fields/Suite_Triple__c.field-meta.xml
<CustomField>
    <fullName>Suite_Triple__c</fullName>
    <label>Suite Triple</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>