force-app/main/default/objects/Opportunity/fields/Survey_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Survey_Improvement__c</fullName>
    <label>Survey Response  Ways To Improve Trip</label>
    <type>TextArea</type>
</CustomField>