force-app/main/default/objects/Opportunity/fields/Survey_Notes__c.field-meta.xml
<CustomField>
    <fullName>Survey_Notes__c</fullName>
    <label>Survey Facility and Competition Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>