force-app/main/default/objects/Opportunity/fields/Survey_Response_Airline_Notes__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response_Airline_Notes__c</fullName>
    <label>Survey Response Airline Notes</label>
    <type>TextArea</type>
</CustomField>