force-app/main/default/objects/Opportunity/fields/Survey_Response_Things_Enjoyed_On_Trip__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response_Things_Enjoyed_On_Trip__c</fullName>
    <label>Survey Response Things Enjoyed On Trip</label>
    <type>TextArea</type>
</CustomField>