force-app/main/default/objects/Opportunity/fields/Tag_Along_Fan_List__c.field-meta.xml
<CustomField>
    <fullName>Tag_Along_Fan_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tag Along Fan List</label>
    <type>Checkbox</type>
</CustomField>