force-app/main/default/objects/Opportunity/fields/Tag_Along_Fan_List_Received__c.field-meta.xml
<CustomField>
    <fullName>Tag_Along_Fan_List_Received__c</fullName>
    <label>Tag Along Fan List Received</label>
    <type>Date</type>
</CustomField>