force-app/main/default/objects/Opportunity/fields/Tag_Along_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Tag_Along_Loss_Reason__c</fullName>
    <label>Tag Along Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Athlete No Longer Traveling</fullName>
            </value>
            <value>
                <fullName>Booked Another Hotel</fullName>
                <color>#FF0000</color>
                <label>Booked Another Hotel</label>
            </value>
            <value>
                <fullName>Booked An Air BNB</fullName>
            </value>
            <value>
                <fullName>Booked On Someone Else&apos;s Reservation</fullName>
            </value>
            <value>
                <fullName>Not Traveling</fullName>
            </value>
            <value>
                <fullName>Price to High</fullName>
            </value>
            <value>
                <fullName>Staying with Family</fullName>
            </value>
            <value>
                <fullName>Timeshare</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>