force-app/main/default/objects/Opportunity/fields/Team_Facebook_Page__c.field-meta.xml
<CustomField>
    <fullName>Team_Facebook_Page__c</fullName>
    <label>Team Facebook Page</label>
    <length>30</length>
    <type>Text</type>
</CustomField>