force-app/main/default/objects/Opportunity/fields/Team_Grocery_Order__c.field-meta.xml
<CustomField>
    <fullName>Team_Grocery_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team Grocery Order</label>
    <type>Checkbox</type>
</CustomField>