force-app/main/default/objects/Opportunity/fields/Team_Instagram_Handle__c.field-meta.xml
<CustomField>
    <fullName>Team_Instagram_Handle__c</fullName>
    <label>Team Instagram Handle</label>
    <length>30</length>
    <type>Text</type>
</CustomField>