force-app/main/default/objects/Opportunity/fields/Team_Tik_Tok_Handle__c.field-meta.xml
<CustomField>
    <fullName>Team_Tik_Tok_Handle__c</fullName>
    <label>Team Tik Tok Handle</label>
    <length>30</length>
    <type>Text</type>
</CustomField>