force-app/main/default/objects/Opportunity/fields/Theme_Park_Ticket_Notes__c.field-meta.xml
<CustomField>
    <fullName>Theme_Park_Ticket_Notes__c</fullName>
    <label>Theme Park Ticket Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>