force-app/main/default/objects/Opportunity/fields/TODAY__c.field-meta.xml
<CustomField>
    <fullName>TODAY__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TODAY</label>
    <type>Date</type>
</CustomField>