force-app/main/default/objects/Opportunity/fields/Transportation_Type__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Type__c</fullName>
    <description>Choose the type of transportation the teams are using to get to the Event Location</description>
    <label>Transportation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Booked Own Air</fullName>
            </value>
            <value>
                <fullName>KSA Events Air</fullName>
            </value>
            <value>
                <fullName>Land Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>