force-app/main/default/objects/Opportunity/fields/Travel_Agreement_Received__c.field-meta.xml
<CustomField>
    <fullName>Travel_Agreement_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Agreement Received</label>
    <type>Checkbox</type>
</CustomField>