force-app/main/default/objects/Opportunity/fields/Travel_Agreement_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Travel_Agreement_Received_Date__c</fullName>
    <label>Travel Agreement Received Date</label>
    <type>Date</type>
</CustomField>