force-app/main/default/objects/Opportunity/fields/Travel_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Travel_Pattern__c</fullName>
    <label>Travel Pattern</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Every Year, Every Other Year, Every Third Year, No Pattern</fullName>
                <label>Every Year</label>
            </value>
            <value>
                <fullName>Every Other Year</fullName>
            </value>
            <value>
                <fullName>Every Three Years</fullName>
            </value>
            <value>
                <fullName>No Pattern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>