force-app/main/default/objects/Opportunity/fields/Triple_Rate__c.field-meta.xml
<CustomField>
    <fullName>Triple_Rate__c</fullName>
    <label>Triple Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>