force-app/main/default/objects/Opportunity/fields/Triple_Room__c.field-meta.xml
<CustomField>
    <fullName>Triple_Room__c</fullName>
    <description>Number of Triples for this Opportunity</description>
    <label>Triple Room</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>