force-app/main/default/objects/Opportunity/fields/Tryout_Date__c.field-meta.xml
<CustomField>
    <fullName>Tryout_Date__c</fullName>
    <label>Tryout Date</label>
    <type>Date</type>
</CustomField>